--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -4,6 +4,7 @@
 
     border: 2px solid salmon;
     border-radius: 10px;
+    outline: none;
      
     text-align: start;
     text-indent: 10px;
